# django-indexes-admin

./: README.md  manage.py  pyproject.toml
django-test-site/django_site/: settings.py
src/djindmin/: admin.py  apps.py  models.py
src/djindmin/migrations/: 0001_initial.py  0002_bmodel.py
