[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "django-indexes-admin"
version = "0.1.0"
description = "A django admin interface for managing database indexes"
authors = [
    "David Park <david@greenparksoftware.co.uk>",
]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/daphtdazz/django-indexes-admin"
packages = [
    { include = "djindmin" },
]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
# These are the minimum versions that are supported. To build a file for testing a specific combination
# of versions use build_versioned_pyproject using one of the pre-defined sets of dependencies in
# test_version_combinations.
# TEST VERSIONS INSERTION POINT
Django = "~4.2"
# TEST VERSIONS INSERTION POINT END
psycopg2 = "^2.9.9"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.1"
syrupy = ">=4.6.0"
pytest-django = ">=4.2.0"
pytest-mock = ">=3.6.0"

# Sphinx dependencies also in docs/requirements.txt for read the docs to pick up.
sphinx = ">=7.1.2"
sphinx-rtd-theme = ">=1.3.0"

[tool.poetry.extras]
# ℹ️ if you update any of these, be sure to update "all = [...]" as well, so that it's easy to get
# all dependencies for testing. You can install any one of these sets using e.g.
#   poetry install -E django_xml

all = [
    "Django",
    "django-countries",
    "lxml",
    "pandas",
    "python-dateutil",
    "py-moneyed",
    "pytz",
    "unidecode"
]

[tool.pytest.ini_options]
pythonpath = ["django-test-site"]
DJANGO_SETTINGS_MODULE = "django_site.settings"
addopts = ["--no-migrations", "--doctest-modules"]
